feat: enforce sobel-only edge method in web demo

--- a/web_demo/templates/index.html
+++ b/web_demo/templates/index.html
@@ -39,11 +39,8 @@
           </label>
           <label>
             <span>Edge Method</span>
-            <select name="edge_method">
-              <option value="auto" selected>Auto</option>
-              <option value="sobel">Sobel</option>
-              <option value="contour">Contour</option>
-              <option value="compare">Compare</option>
+            <select name="edge_method" disabled aria-disabled="true">
+              <option value="sobel" selected>Sobel (Locked)</option>
             </select>
           </label>
         </div>
